--- a/View/AdminView/admindashboard.html
+++ b/View/AdminView/admindashboard.html
@@ -1,4 +1,4 @@
-{{> adminheader}}
+{{> adminheader admin=admin}}
 
 {{>adminsidebar}}
 
@@ -10,68 +10,11 @@
         <nav>
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                <li class="breadcrumb-item active">Author database Management</li>
+                <li class="breadcrumb-item active">SAFARI_X_JOURNEYS</li>
             </ol>
         </nav>
     </div><!-- End Page Title -->
 
-    <section class="section dashboard">
-        <div class="row">
-
-            <!-- Left side columns -->
-            <div class="col-lg-12">
-                <div class="row">
-
-                    <!-- Sales Card -->
-                    <div class="col-xxl-12 col-md-12">
-                        <div class="card info-card sales-card">
-                            <div class="card-body">
-                                <h5 class="card-title">Author database Management</h5>
-                                <form>
-
-                                    <div class="row mb-3">
-                                        <div class="col-sm-4 mb-4">
-                                            <input name="password" type="password" class="form-control"
-                                                id="currentPassword">
-                                        </div>
-                                        <div class="col-sm-4">
-                                            <input name="newpassword" type="password" class="form-control"
-                                                id="newPassword">
-                                        </div>
-                                        <div class="col-sm-4">
-                                            <input name="renewpassword" type="password" class="form-control"
-                                                id="renewPassword">
-                                        </div>
-                                        <div class="col-sm-4">
-                                            <input name="password" type="password" class="form-control"
-                                                id="currentPassword">
-                                        </div>
-                                        <div class="col-sm-4">
-                                            <input name="newpassword" type="password" class="form-control"
-                                                id="newPassword">
-                                        </div>
-                                        <div class="col-sm-4">
-                                            <input name="renewpassword" type="password" class="form-control"
-                                                id="renewPassword">
-                                        </div>
-                                        <div class="col-sm-12">
-                                            <a href="#" class="btn btn-info mt-4">submit</a>
-                                        </div>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-                    </div><!-- End Sales Card -->
-
-
-
-                </div>
-            </div>
-
-
-
-        </div>
-    </section>
 
 </main><!-- End #main -->
 
