--- a/View/Partials/adminheader.hbs
+++ b/View/Partials/adminheader.hbs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>DRDO CFEES</title>
+    <title>SAFARIX</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -34,8 +34,8 @@
     <header id="header" class="header fixed-top d-flex align-items-center">
 
         <div class="d-flex align-items-center justify-content-between">
-            <a href="index.html" class="logo d-flex align-items-center">
-                <p class=" d-lg-block"><span>DRDO</span> CFEES</p>
+            <a href="/dashboard" class="logo d-flex align-items-center">
+                <p class=" d-lg-block"><span>SAFARIX</span></p>
             </a>
             <i class="bi bi-list toggle-sidebar-btn"></i>
         </div>
@@ -50,23 +50,30 @@
                 <li class="nav-item dropdown pe-3">
 
                     <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
-                        <img src="assets/img/profile-img.jpg" alt="Profile" class="rounded-circle">
-                        <span class="d-none d-md-block dropdown-toggle ps-2">Raj Tiwari</span>
+                        
+                        <span class="d-none d-md-block dropdown-toggle ps-2">Welcome, {{admin.fullname}}</span>
                     </a><!-- End Profile Iamge Icon -->
 
                     <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
                         <li class="dropdown-header">
-                            <h6>Raj Tiwari</h6>
-                            <span>Web Designer</span>
-                        </li>
+                            {{!-- <h6>{{admin.fullname}}</h6>
+                            <span>Web Designer</span> --}}
+                         </li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
 
-                        <li>
+                        {{!-- <li>
                             <a class="dropdown-item d-flex align-items-center" href="users-profile.html">
                                 <i class="bi bi-person"></i>
-                                <span>My Profile</span>
+                                <span>{{admin.fullname}}</span>
+                            </a> 
+                        </li> --}}
+
+                         <li>
+                            <a class="dropdown-item d-flex align-items-center" href="/admin/profile">
+                                <i class="bi bi-person"></i>
+                                <span>Profile</span>
                             </a>
                         </li>
                         <li>
@@ -74,29 +81,23 @@
                         </li>
 
                         <li>
-                            <a class="dropdown-item d-flex align-items-center" href="users-profile.html">
+                            <a class="dropdown-item d-flex align-items-center" href="/admin/changepassword">
                                 <i class="bi bi-gear"></i>
-                                <span>Account Settings</span>
+                                <span>change password</span>
                             </a>
                         </li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
 
-                        <li>
-                            <a class="dropdown-item d-flex align-items-center" href="pages-faq.html">
-                                <i class="bi bi-question-circle"></i>
-                                <span>Need Help?</span>
-                            </a>
-                        </li>
-                        <li>
+                      
                             <hr class="dropdown-divider">
-                        </li>
+                        </li> 
 
                         <li>
-                            <a class="dropdown-item d-flex align-items-center" href="#">
+                            <a class="dropdown-item d-flex align-items-center" href="/adminlogout">
                                 <i class="bi bi-box-arrow-right"></i>
-                                <span>Sign Out</span>
+                                <span>log Out</span>
                             </a>
                         </li>
 
@@ -104,6 +105,10 @@
                 </li><!-- End Profile Nav -->
 
             </ul>
-        </nav><!-- End Icons Navigation -->
+        </nav>
 
-    </header><!-- End Header -->
+     </header>
+
+    
+
+  
