--- a/View/Partials/adminsidebar.hbs
+++ b/View/Partials/adminsidebar.hbs
@@ -3,18 +3,32 @@
 
         <ul class="sidebar-nav" id="sidebar-nav">
             <li class="nav-item">
-                <a class="nav-link " href="index.html">
+                <a class="nav-link " href="/dashboard">
                     <i class="bi bi-window-dock"></i>
                     <span>Dashboard</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link collapsed" href="pages-login.html">
+                <a class="nav-link collapsed" href="/users">
                     <i class="bi bi-wallet"></i>
-                    <span>Author database Management</span>
+                    <span>User Management</span>
                 </a>
             </li>
+
+             <li class="nav-item">
+                <a class="nav-link collapsed" href="/addcabform">
+                    <i class="bi bi-wallet"></i>
+                    <span>Cab Management</span>
+                </a>
+            </li>
+
             <li class="nav-item">
+                <a class="nav-link collapsed" href="/addguideform">
+                    <i class="bi bi-wallet"></i>
+                    <span>Guide Management</span>
+                </a>
+            </li>
+            {{!-- <li class="nav-item">
                 <a class="nav-link collapsed" href="pages-login.html">
                     <i class="bi bi-wallet"></i>
                     <span>Establishment</span>
@@ -31,9 +45,9 @@
                     <i class="bi bi-file-earmark-lock"></i>
                     <span>Audit</span>
                 </a>
-            </li>
+            </li> --}}
             <li class="nav-item">
-                <a class="nav-link collapsed" href="pages-login.html">
+                <a class="nav-link collapsed" href="/adminlogout">
                     <i class="bi bi-box-arrow-in-right"></i>
                     <span>Logout</span>
                 </a>
