--- a/View/Partials/adminsidebar.hbs
+++ b/View/Partials/adminsidebar.hbs
@@ -33,6 +33,9 @@
             <ul id="cab-management" class="nav-content collapse" data-bs-parent="#sidebar-nav">
                 <li><a href="/addcabform"><i class="bi bi-circle"></i><span>Add Cab</span></a></li>
                 <li><a href="/cab/list"><i class="bi bi-circle"></i><span>View Cabs</span></a></li>
+                <li><a href="/cab/assign/form"><i class="bi bi-circle"></i><span>Assign Cab</span></a></li>
+                <li><a href="/cab/assign/list"><i class="bi bi-circle"></i><span>View Assg. Cab</span></a></li>
+
             </ul>
         </li>
 
@@ -63,21 +66,9 @@
                 <li><a href="/addguideform"><i class="bi bi-circle"></i><span>Add Guide</span></a></li>
                 <li><a href="/guide/list"><i class="bi bi-circle"></i><span>View Guides</span></a></li>
             </ul>
-        </li>  
+        </li>
 
-         <!-- CAB Assign -->
-        <li class="nav-item">
-            <a class="nav-link collapsed" data-bs-toggle="collapse" href="#assign-management" role="button"
-                aria-expanded="false" aria-controls="assign-management">
-                <i class="bi bi-wallet"></i>
-                <span>Cab Assign Management</span>
-                <i class="bi bi-chevron-down ms-auto"></i>
-            </a>
-            <ul id="assign-management" class="nav-content collapse" data-bs-parent="#sidebar-nav">
-                <li><a href="/cab/assign/form"><i class="bi bi-circle"></i><span>Assign Cab</span></a></li>
-                <li><a href="/guide/list"><i class="bi bi-circle"></i><span>View Guides</span></a></li>
-            </ul>
-        </li>  
+
 
 
 
@@ -95,6 +86,26 @@
                 <li><a href="/banner/list"><i class="bi bi-circle"></i><span>View Banners</span></a></li>
             </ul>
         </li>
+
+
+
+
+        <!-- Testimonial Management Dropdown -->
+        <li class="nav-item">
+            <a class="nav-link collapsed" data-bs-toggle="collapse" href="#testimonial-management" role="button"
+                aria-expanded="false" aria-controls="testimonial-management">
+                <i class="bi bi-wallet"></i>
+                <span>Testimonial Management</span>
+                <i class="bi bi-chevron-down ms-auto"></i>
+            </a>
+            <ul id="testimonial-management" class="nav-content collapse" data-bs-parent="#sidebar-nav">
+                <li><a href="/testimonial/addform"><i class="bi bi-circle"></i><span>Add Testimonial</span></a></li>
+                <li><a href="/testimonial/list"><i class="bi bi-circle"></i><span>View Testimonial</span></a></li>
+            </ul>
+        </li>
+
+
+
 
         <!-- FAQ Management Dropdown -->
         <li class="nav-item">
