--- a/View/Partials/adminheader.hbs
+++ b/View/Partials/adminheader.hbs
@@ -17,6 +17,7 @@
     <link
         href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
     <!-- Vendor CSS Files -->
     <link href="/css/bootstrap.min.css" rel="stylesheet" />
@@ -50,7 +51,7 @@
                 <li class="nav-item dropdown pe-3">
 
                     <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
-                        
+
                         <span class="d-none d-md-block dropdown-toggle ps-2">Welcome, {{admin.fullname}}</span>
                     </a><!-- End Profile Iamge Icon -->
 
@@ -58,7 +59,7 @@
                         <li class="dropdown-header">
                             {{!-- <h6>{{admin.fullname}}</h6>
                             <span>Web Designer</span> --}}
-                         </li>
+                        </li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
@@ -67,10 +68,10 @@
                             <a class="dropdown-item d-flex align-items-center" href="users-profile.html">
                                 <i class="bi bi-person"></i>
                                 <span>{{admin.fullname}}</span>
-                            </a> 
+                            </a>
                         </li> --}}
 
-                         <li>
+                        <li>
                             <a class="dropdown-item d-flex align-items-center" href="/admin/profile">
                                 <i class="bi bi-person"></i>
                                 <span>Profile</span>
@@ -90,25 +91,21 @@
                             <hr class="dropdown-divider">
                         </li>
 
-                      
-                            <hr class="dropdown-divider">
-                        </li> 
 
-                        <li>
-                            <a class="dropdown-item d-flex align-items-center" href="/adminlogout">
-                                <i class="bi bi-box-arrow-right"></i>
-                                <span>log Out</span>
-                            </a>
-                        </li>
+                        <hr class="dropdown-divider">
+                </li>
 
-                    </ul><!-- End Profile Dropdown Items -->
-                </li><!-- End Profile Nav -->
+                <li>
+                    <a class="dropdown-item d-flex align-items-center" href="/adminlogout">
+                        <i class="bi bi-box-arrow-right"></i>
+                        <span>log Out</span>
+                    </a>
+                </li>
+
+            </ul><!-- End Profile Dropdown Items -->
+            </li><!-- End Profile Nav -->
 
             </ul>
         </nav>
 
-     </header>
-
-    
-
-  
+    </header>
